[gd_scene load_steps=6 format=3 uid="uid://4k65ti3gaotl"]

[ext_resource type="PackedScene" uid="uid://1o3gq52tsajg" path="res://Sences/player.tscn" id="1_2k6g2"]
[ext_resource type="Script" path="res://Scripts/map.gd" id="1_8wrru"]
[ext_resource type="Script" path="res://Scripts/Score.gd" id="2_4rjtl"]

[sub_resource type="InputEventKey" id="InputEventKey_jp8yw"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_o1cna"]
events = [SubResource("InputEventKey_jp8yw")]

[node name="Map" type="Node2D"]
script = ExtResource("1_8wrru")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 100

[node name="Score" type="Label" parent="HUD"]
visible = false
custom_minimum_size = Vector2(8.87, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 56.0
offset_right = -79.0
offset_bottom = 108.0
grow_horizontal = 0
pivot_offset = Vector2(88.4725, 25)
theme_override_font_sizes/font_size = 32
text = "score:0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_4rjtl")

[node name="Start" type="Button" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = 119.0
offset_right = 77.0
offset_bottom = 198.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
shortcut = SubResource("Shortcut_o1cna")
text = "开始游戏"

[node name="Message" type="Label" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -147.0
offset_right = 172.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 56
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player" parent="." instance=ExtResource("1_2k6g2")]
position = Vector2(-131, -47)

[node name="Camera2D" type="Camera2D" parent="Player"]
position_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Path2D" type="Path2D" parent="."]

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="Spawn" type="Timer" parent="."]
wait_time = 0.5

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="HUD/Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="Spawn" to="." method="_on_spawn_timeout"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
